.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todoapp   
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1   
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)                     # ← це {your_regex}
        pathType: ImplementationSpecific 
        backend:
          service:
            name: todoapp-service
            port:
              number: 80
